[package]
name = "weblua"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = [ "cdylib" ]

[dependencies]
wasm-bindgen = "0.2.95"
hematita = { git = "https://github.com/danii/hematita.git" }
web-sys = { version = "0.3.72", features = [ "Document", "Element", "Node", "Window", "console" ] }
